<resources>
    <string name="app_name">Flash Dictionary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="OK">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>

    <string name="word">Word:</string>
    <string name="translation">Translation:</string>
    <string name="tager">Tag:</string>
    <string name="added">Added:</string>
    <string name="tested">Tested:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="all_words">All words:</string>
    <string name="add_new_word">Add new word</string>
    <string name="deleteBtInToolbar">Delete (</string>
    <string name="word_detail">Word detail</string>
    <string name="un_select_words">(Un)Select words</string>
    <string name="un_select_all_words">(Un)Select all words</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="alphabet">Alphabet</string>
    <string name="last_test">Last test</string>
    <string name="toast_your_words_deleted_all">You have deleted all words.</string>
    <string name="toast_your_words_you_have_deleted">You have deleted</string>
    <string name="toast_your_words_words">words.</string>
    <string name="you_do_not_have_any_words_yet">You do not have any words yet :(</string>
    <string name="item_difficulty">Difficulty</string>
    <string name="item_added">Added</string>
    <string name="add_word_translation_exists">This translation of given word already exists!</string>
    <string name="add_word_successfully_added">Word successfully added.</string>
    <string name="add_word_choose_or_add">Choose or add translation!</string>
    <string name="add_word_translation_long">Transltaion is too long!</string>
    <string name="add_word_add_some">Add some word!</string>
    <string name="add_word_too_long">Word is too long!</string>
    <string name="add_word_unknown">Unknown</string>
    <string name="add_word_word">Word</string>
    <string name="add_word_translation">Translation</string>
    <string name="add_word_options">Additional options</string>
    <string name="add_word_toolbar">Add word manually</string>
    <string name="add_word_write_description">Write description (another meaning):</string>
    <string name="add_word_enter_description">Enter description</string>
    <string name="add_word_write_tag">Write tag (e.g. Book, Test, Dictionary):</string>
    <string name="add_word_enter_tag">Enter tag</string>
    <string name="add_word_choose_difficulty">Choose difficulty (default recommended):</string>
    <string name="add_word_found_translations">Found translations:</string>
    <string name="add_word_any_translations">Any translations for given word.</string>
    <string name="add_word_write_your_own">Write your own translation</string>
    <string name="add_word_enter_transltaions">Enter translation</string>
    <string name="add_word_type_here">Type here</string>
    <string name="your_words_never">Never</string>
    <string name="description">Description</string>
    <string name="never">Never</string>
    <string name="your_words">Your words</string>
    <string name="tag">Tag</string>
    <string name="daily_test">Daily Test</string>
    <string name="custom_flashcard">Custom FlashCard</string>
    <string name="todays_words">Today\'s words</string>
    <string name="this_weeks_words">This week\'s words</string>
    <string name="this_months_words">This month\'s words</string>
    <string name="this_years_words">This year\'s words</string>
    <string name="start_flash_cards">Start FlashCards</string>
    <string name="empty_source_error">You don\'t have any words from this source</string>
    <string name="home_screen">Home Screen</string>
    <string name="flashcards">FlashCards</string>
    <string name="tests">Tests</string>
    <string name="statistics">Statistics</string>
    <string name="writing">Writing</string>
    <string name="next">NEXT</string>
    <string name="write_the_translation">write the translation</string>
    <string name="no_words_in_this_category">No words in this category :(</string>
    <string name="you_have_number_points">You have {0} points</string>
    <string name="choose_resource">Choose resource</string>
    <string name="all">All</string>
    <string name="usage_time">Usage time</string>
    <string name="words_distribution">Words distribution</string>
    <string name="well_done">Well Done</string>
    <string name="finish">Finish</string>
    <string name="points">Points</string>
    <string name="today_s_words">Today\'s words</string>
    <string name="choose_language">Choose language</string>
    <string name="nothing">nothing :(</string>
    <string name="type_new_word">Type new word</string>
    <string name="snap_new_word">Snap new word</string>
    <string name="filter_words">Filter words</string>
    <string name="not_tested">Not tested:</string>
    <string name="add_by_typing">Add by typing</string>
    <string name="write_your_word_manualy">Write your word manualy</string>
    <string name="add_by_photo">Add by photo</string>
    <string name="take_a_photo_of_words">Take a photo of words</string>
    <string name="su">Su</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="study_time">Study time</string>
    <string name="test_time">Test time</string>
    <string name="first">Hard</string>
    <string name="second">Harder</string>
    <string name="third">Medium</string>
    <string name="fourth">Easier</string>
    <string name="fifth">Easy</string>

</resources>
