<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--DummyView - For keeping focus -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_word_write_description" />

    <EditText
        android:id="@+id/add_word_aditional_options_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_word_enter_description"
        android:inputType="text"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_word_write_tag" />


    <EditText
        android:id="@+id/add_word_aditional_options_tag_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_word_enter_tag"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_word_choose_difficulty" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/add_word_aditional_options_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:scrollbars="none" />
    </RelativeLayout>


</LinearLayout>
