<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:weightSum="2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_detail"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textStyle="bold" />

            <TextView
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/translation"
                android:textStyle="bold" />

            <TextView
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textStyle="bold" />

            <TextView
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/added"
                android:textStyle="bold" />

            <TextView
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tested"
                android:textStyle="bold" />

            <TextView
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="textEnd">

            <TextView
                android:id="@+id/your_words_info_dialog_slovo"
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                tools:text="Ahoj" />

            <TextView
                android:id="@+id/your_words_info_dialog_preklad"
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/your_words_info_dialog_zdroj"
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/your_words_info_dialog_datum_pridani"
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:ellipsize="end"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/your_words_info_dialog_datum_zmeny"
                style="@style/YourWordsDialogStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:ellipsize="end"
                android:textAlignment="textEnd"
                tools:text="Never" />

            <ImageView
                android:id="@+id/your_words_info_dialog_file_iv"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitEnd"
                android:src="@drawable/file1" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
